--- a/sub/ETC/기본개념정리.md
+++ b/sub/ETC/기본개념정리.md
@@ -781,3 +781,407 @@ API의 생김새는 주로 `http://api.data.go.kr/weather/list` 이런식으로 
 ---
 
 ## 동기와 비동기란?
+
+쉽게 말하자면 동기(Synchronous)는 답변을 기다리는 것, 비동기(Asynchronous)는 답변을 기다리지 않는 것이다.
+
+일상 생활에서 예시로 생각해보자면 동기식으로 일을 한다는 건 한 사람이 물건을 던지면 상대방이 물건을 잘 받았는지 안 받았는지 답변을 기다리게 된다.
+그때까지 다음 일은 하지 않는 상태이다. 상대방의 답변이 OK라면 그때서야 비로소 다음 물건을 전달해주는 방식이다.
+
+그렇다면, 비동기식으로 일을 하는 경우는 어떤 경우를 말하는 걸까?
+비동기식으로 일을 한다는 것은 물건을 상대방에게 전달할 때, 상대방의 상황은 고려하지 않고 계속해서 물건을 상대방에게 전달하는 방식을 의미한다.
+
+택배 운송 작업을 생각해보자, 나에게 배송 물품이 6개 정도 있고 각각 6개의 집에 물건을 배송하는 업무를 해야한다.
+동기식으로 일을 한다면, 물건을 가지고 1번 집에 찾아가서 받는 사람의 답변을 기다린 뒤 답변을 받으면 다음 2번 일을 하는 방식이다.
+이렇게 계속 답변을 받을 때까지 기다리는 것이다. (쉽게 말해, 배달 오프라인 결제 시스템과 비슷)
+
+비동기식으로 일을 한다면, 물건을 가지고 1번 집에 찾아가서 물건을 놓고 답변을 기다리지 않고 바로 다음 2번 일을 수행한다.
+이렇게 비동기 식은 답변을 기다리지 않고 바로 다음 일을 수행한다. (비대면 배달과 같은 방식)
+
+위와 같은 상황을 생각해보면, 비동기 방식이 더 효율적이라고 느낄 수 있다.
+왜냐하면 동기식은 답변을 기다려야 하기 때문에 비동기 방식이 더 자원을 효율적으로 사용할 수 있게 보인다.
+
+하지만, 비동기식으로 일을 하면 확인이 안된다. 즉, 물건을 상대방이 잘 전달 받았는지 받지 못했는지를 결과를 확인 할 수 없다.
+
+예를들어, 운송기사가 상품을 전달했다고 했는데 받는 사람이 못 받았다고 말하면 문제가 발생할 수 있다.
+그래서 비동기 방식에서 다음과 같은 프로세스를 추가했다.
+비동기 식으로 일을 처리하되, 배송 도착 사진을 촬영해서 받는 사람에게 전송하는 것이다. (비대면 배달 후 문자 전송 시스템같은 방식)
+이렇게 되면 효율적인 일 처리를 하되 배송을 완료했다는 정당성이 생긴다.
+
+중요한건 비동기로 일을 할 때에는 효율적이지만 그 업무 프로세스가 조금 복잡해 질 수 있다는 점이다.
+
+**동기와 비동기의 장단점**
+
+![](https://velog.velcdn.com/images/ninto_2/post/2dfa9f2f-0d59-4ff1-adae-27172e01a906/image.png)
+
+동기식으로 일을 진행 할 때에는 업무가 단순하다는 장점이 있지만, 자원을 비효율적으로 사용하게 된다는 단점이 존재한다.
+비동식인 경우에는 자원을 효율적으로 사용하지만, 업무가 복잡해 질 수 있다는 단점이 존재한다.
+
+- Blocking(블로킹): 동기식에서 답변이 올 때까지 기다리는 상태를 의미한다. (쉽게말해 기다리는 것)
+- Non-Blocking(논블로킹): 비동기식에서 답변이 올 때까지 기다리지 않는 상태를 의미한다.
+- 동기: 결과를 기다리는 것
+- 비동기: 결과를 기다리지 않는 것
+
+그렇다면, 프로그래밍을 구현할 때 비동기가 효율적이니까 복잡하더라도 계속 비동기로 일을 해야 하는 것 일까?
+물론 프로그램을 구현할 때 효율성을 가지고 따질 때는 그럴 수 있겠지만 동기와 비동기는 어떤 상황이냐에 따라 선택할 수 있다.
+
+어떤 일을 수행한 결과로 다음 일을 수행 할 때는 동기로 해야 한다.
+(다음 일에서 결과를 보장 받을 수 있을 경우)
+예를 들어서 편의점에서 아이스크림을 사고, 남은 돈으로 정육점에서 고기를 산다고 가정을 했을 때 편의점에서 결과인 거스름돈 받는 걸 기다리지 않고 나오면 안되기 때문이다.
+지금처럼 결과가 다음 행동에 지장을 주는 경우에는 동기로 일을 진행해야 한다.
+
+만약 계좌 이체 프로그램을 구현하려고 한다고 가정했을 때, A계좌에서 B로 10000원을 송금할 예정이다.
+이러한 프로그램은 동기식으로 구현을 해야 한다.
+
+```js
+function ATM() {
+  A계좌로_인출(); // A계좌에서 만원을 인출하는 프로그램을 실행
+
+  B계좌로_송금(); // 결과를 기다리지않고 B계좌에 만원을 송금하면 안된다.
+}
+
+function A계좌로_인출() {
+  console.log("A계좌 인출"); // 인출과정에서 잔액이 부족하다거나 올바르지 않은 계좌번호라던지, 은행 점검시간 등의 문제가 발생할 수 있기 때문
+}
+
+function B계좌로_송금() {
+  console.log("B계좌 송금");
+}
+```
+
+위와 같은 프로그램에서는 결과가 성공해야지만, 다음 함수를 호출하는 식으로 이루어져야 한다.
+즉, A프로그램을 실행하고 동기식으로 기다렸다가 B프로그램을 실행해야 한다.
+이처럼 프로그램의 상황에 따라 동기식, 비동기식 구현 여부가 달라 질 수 있다.
+
+<br>
+
+---
+
+## 프론트엔드 & 백엔드
+
+![](https://velog.velcdn.com/images/ninto_2/post/729d1269-3dd6-4b0b-a56c-04d60fa0b8d7/image.png)
+
+쉽게 말하자면, 프론트엔드는 웹사이트에서 사용자들이 사용하는 화면과 같은 앞 단을 의미한다.
+그리고 이러한 사용자 화면(UI)를 개발하는 사람을 프론트엔드 개발자라고 한다.
+(요청하는 앞 단의 영역)
+
+백엔드는 눈에 보이지 않는 영역으로 API와 같은 뒷 단의 영역을 말한다.
+그리고 이러한 API를 개발하는 사람을 백엔드 개발자라고 한다.
+(요청에 응답하는 뒷 단의 영역)
+
+넓은 의미로는 이 둘을 클라이언트와 서버라고도 한다.
+
+클라이언트는 인터넷상에서 요청하는 쪽을 말하며, 서버는 이러한 요청에 대해 서비스를 제공하는 역할을 한다.
+
+예를 들어, 어떤 회사에서 포켓몬 도감 웹사이트를 개발한다고 가정을 해보자.
+이 웹 사이트의 기능은 간단하다. 사용자가 웹페이지에 접근했을때 포켓몬 목록을 보여 주면 된다.
+그러면 이 회사의 백엔드 개발자는 프론트엔드에서 포켓몬 목록을 가져갈 수 있도록 자바, 파이썬, 노드js와 같은 서버 개발 언어를 사용하여 `http://api.pokemon.co.kr/pokemons`와 같은 포켓몬 목록 API를 개발한다.
+
+API는 위와 같은 URL 형식의 주소를 말한다. 예를들어 이 API를 호출하면
+
+```js
+[
+  {
+    name: "꼬부기",
+    image: "https://127.0.0.1/꼬부기.png",
+  },
+  {
+    name: "이상해씨",
+    image: "https://127.0.0.1/이상해씨.png",
+  },
+];
+```
+
+와 같은 결과값을 반환한다.
+백엔드 개발자는 이 API를 프론트엔드 개발자에게 제공한다.
+물론 이 URL만 단순히 제공하는 것이 아니라 이 API를 어떻게 사용하는지 API 명세서를 정리해놓는다.
+
+프론트엔드 개발자는 백엔드 개발자들이 만들어 놓은 이 API 명세서(API Docs)를 확인한 후,
+HTML,CSS,JavaScript와 같은 웹 개발 언어를 사용하여 일반적인 사용자가 볼 수 있도록 사용자 인터페이스를
+즉 UI를 개발하는 업무를 맡는다.
+
+이 도감 사이트가 인기가 많아져서 유저들이 직접 포켓몬을 등록할 수 있는 기능 추가를 하기로 했다고 가정해보자,
+
+![](https://velog.velcdn.com/images/ninto_2/post/cd7e6755-c1a1-4c87-bf37-fecce929e486/image.png)
+
+스펙이 추가되었으므로 백엔드 개발팀에서는 유저 포켓몬을 등록할 수 있는 등록 API도 개발한다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/91443b79-e829-4e63-b0bd-81af0125233b/image.png)
+
+그리고 프론트엔드 개발팀은 사용자가 유저 포켓몬을 등록할 수 있도록, 백엔드 개발팀에서 제공하는 API를 사용하여 등록할 수 있는 화면을 개발한다.
+
+이렇듯, 백엔드 개발팀은 서버측(Server Side)를 개발하고, 클라이언트 개발팀은 클라이언트측(Client Side)를 개발한다.
+그래서 클라이언트 개발자, 서버 개발자 라고도 한다.
+
+참고로, 서버 개발자라고 해서 서버를 개발하는게 아니라 서버 위에서 실행되는 애플리케이션을 개발하는 개발자를 의미한다.
+
+위 회사에서 또 다른 기능으로 매일 포켓몬을 가장 많이 등록한 유저를 추첨하는 기능을 추가한다고 해보자.
+
+![](https://velog.velcdn.com/images/ninto_2/post/2900930c-ce1d-4511-839e-dbc36eb1cf1b/image.png)
+
+이러한 기능은 사용자의 이벤트에 의해 실행되는 것이 아니라, 서버측에서 매일 하루에 한 번씩 자동으로 데이터베이스에 접근하여 정기적으로 수행해야 하는 작업이다.
+이렇게 정기적으로 반복해서 수행하거나 정해진 규칙에 따라 일괄처리 하는 것을 배치프로그램 이라고 한다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/5ce6c0c1-0e68-4b78-826a-9cf2e1fc488d/image.png)
+
+백엔드 개발팀에서는 프론트엔드에서 요청하는 API뿐만 아니라 서버측에서 실행되는 모든 애플리케이션을 개발하는 역할을 담당한다.
+
+이 회사에서는 또 안드로이드와 iOS 어플까지 론칭 하기로 했다고 가정해보자.
+그러면 자바나 코틀린으로 안드로이드를 개발하고 Object-C나 Swift와 같은 언어를 사용하여 iOS 앱을 개발한다.
+
+프론트엔드와 백엔드를 언급하는건 보통 웹의 경우에 많이 쓰이며, 모바일과 같은 경우에는 클라이언트 개발자, 모바일 또는 안드로이드, iOS 개발자라고 한다.
+
+이러한 용어를 언급하는 이유는 과거에 웹사이트를 개발할 때 JSP나 PHP와 같은 템플릿엔진을 기반으로 개발을 많이 진행했었는데 이런 경우에는 따로 프론트, 백엔드를 나누지 않고 그냥 웹개발자로서 개발을 진행했기 때문이다.
+
+하지만 현대 웹애플리케이션에서는 React, Vue, Angular와 같은 강력한 웹 개발 프레임워크가 등장했고,
+브라우저와 HTML5 기술이 발전하면서 웹 개발 폭이 조금 더 다양해졌다.
+
+과거의 템플릿 엔진으로 하나의 웹 애플리케이션을 개발하던 시절과는 달리 프론트엔드, 백엔드의 완전한 분리 구조를 이루면서 서로 API통신을 주고받는 웹개발 방식으로 점차 바뀌게 되었다.
+
+이렇게 웹개발 방식의 분리 구조가 명확해지면서 이러한 용어가 쓰이게 되었다.
+
+<br>
+
+---
+
+## 이벤트 버블링과 캡처링
+
+브라우저에서 이벤트가 발생했을 때 과연 어떠한 흐름으로 Event Phase(이벤트 전파)가 이루어 질까?
+
+```html
+<html>
+  <head>
+    <title>Event Phase</title>
+    <script src="index.js" defer></script>
+  </head>
+  <body>
+    body 영역
+    <main>
+      main 영역
+      <div>
+        div 영역
+        <p>
+          p 영역
+          <span>span 영역</span>
+        </p>
+      </div>
+    </main>
+  </body>
+</html>
+```
+
+![](https://velog.velcdn.com/images/ninto_2/post/798f07bb-cfb2-45b4-90d1-3ece31ad6fd6/image.png)
+
+예를들어, 가장 안쪽에 있는 span 태그에 click 이벤트가 발생했다고 가정해보자.
+그러면 이벤트의 흐름은 최상위 요소인 html요소부터 자식 태그로 타고 내려가서 target 이벤트 요소까지 이벤트가 전파된다.
+그리고 나서 반대로, 다시 부모요소로 타고 올라가는 흐름을 보인다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/01d837cb-a828-4b05-ad08-b07eb0657ae6/image.png)
+
+즉, 이벤트의 흐름은 최상위 요소부터 target 이벤트 요소까지 이벤트가 전파된 다음에 다시 부모부터 최상위 요소까지 전파되는 흐름이다.
+
+그리고 최상위 요소부터 target 이벤트 요소까지 이벤트가 전파되는 과정을 이벤트 캡쳐링(Event capturing)이라고 하며, 반대로 부모요소부터 최상위 요소까지 이벤트가 전파되는 과정을 이벤트 버블링(Event bubbling)이라고 한다.
+
+보통 자바스크립트에서 이벤트를 등록할 때, `addEventListener`를 이용해서 등록하는데, 이때 기본 동작은 이벤트 버블링으로 동작하게 된다.
+
+```js
+const $body = document.querySelector("body");
+const $main = document.querySelector("main");
+const $div = document.querySelector("div");
+const $p = document.querySelector("p");
+const $span = document.querySelector("span");
+
+$span.addEventListener("click", function () {
+  console.log("span 태그");
+});
+$p.addEventListener("click", function () {
+  console.log("p 태그");
+});
+$div.addEventListener("click", function () {
+  console.log("div 태그");
+});
+$main.addEventListener("click", function () {
+  console.log("main 태그");
+});
+$body.addEventListener("click", function () {
+  console.log("body 태그");
+});
+
+/* 
+span태그 클릭시 span부터 시작해서 body태그까지 버블링으로 올라가는 것을 확인할 수 있다.
+"span 태그"
+"p 태그"
+"div 태그"
+"main 태그"
+"body 태그"
+*/
+```
+
+위와 같은 이벤트는 버블링으로 동작하기 때문에 해당 위치에 이벤트가 등록되었다라고 생각하면 된다.
+
+그렇다면, 이벤트가 캡처링될 때 동작은 어떻게 이루어 질까?
+
+```js
+const $body = document.querySelector("body");
+const $main = document.querySelector("main");
+const $div = document.querySelector("div");
+const $p = document.querySelector("p");
+const $span = document.querySelector("span");
+
+// 이벤트 캡처링
+$span.addEventListener(
+  "click",
+  function () {
+    console.log("캡처링 span 태그");
+  },
+  true
+); // addEventListener에 호버를 하게 되면, 3번째 파라미터로  boolean 타입이나 이벤트리스너 옵션타입을 받을 수 있다.
+$p.addEventListener(
+  "click",
+  function (event) {
+    console.log(`${event.eventPhase} 캡처링 p 태그`); // 이벤트 페이즈는 현재 캡처링 단계에서 페이즈값을 확인할 수 있다. [2]
+  },
+  true
+);
+$div.addEventListener(
+  "click",
+  function () {
+    console.log("캡처링 div 태그");
+  },
+  true
+);
+$main.addEventListener(
+  "click",
+  function () {
+    console.log("캡처링 main 태그");
+  },
+  true
+);
+$body.addEventListener(
+  "click",
+  function () {
+    console.log("캡처링 body 태그");
+  },
+  true
+);
+
+// 이벤트 버블링
+$span.addEventListener(
+  "click",
+  function () {
+    console.log("버블링 span 태그");
+  },
+  false
+);
+$p.addEventListener("click", function () {
+  console.log("버블링 p 태그");
+});
+$div.addEventListener("click", function () {
+  console.log("버블링 div 태그");
+});
+$main.addEventListener("click", function () {
+  console.log("버블링 main 태그");
+});
+$body.addEventListener("click", function () {
+  console.log("버블링 body 태그");
+});
+```
+
+![](https://velog.velcdn.com/images/ninto_2/post/eae3af7e-a043-40bf-b561-982aba65ee1f/image.png)
+
+`addEventListener`의 3번째 파라미터로 `true`를 전달하게 되면 이벤트 캡처링으로 동작하게 된다.
+default값은 기본적으로 `false`로 되어있다.(default가 false면 일반적으로 버블링)
+
+이 상태에서 다시 클릭하게 되면, body태그부터 이벤트가 발생한 span태그까지 전파되는 것을 확인할 수 있다.
+그리고 다시 이벤트가 발생한 span태그를 실행한 후에 부모로 이벤트가 전파되는 과정을 확인 할 수 있다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/969c40d5-b777-4576-befd-abecca7cf5a3/image.png)
+
+또한, 이벤트객체에는 `eventPhase`라는 속성이 있다.
+캡처링 될 때는 이벤트 페이즈의 값이 [1]이고, 타겟 요소에 왔을 때는 [2], 버블링 될 때에는 [3]이 나오는 것을 확인할 수 있다.
+
+> Event 인터페이스의 `eventPhase` 읽기 전용 속성은 **현재 평가 중인 이벤트 흐름 단계**를 나타낸다. - MDN
+
+즉, 캡처링 될 때 부모객체를 통해 타깃 이벤트까지 전달될 때에는 값이 [1], 타깃에 도착했을 때는 [2], 역으로 버블링되어 부모요소로 올라갈 때에는 [3] 이라고 보면 된다.
+
+그러면 이러한 이벤트의 전파를 막는 방법은 무엇일까?
+이럴때에는 이벤트 객체의 이벤트 전파를 막아주는 `event.stopPropagation()` 메서드를 사용할 수 있다.
+
+```js
+$span.addEventListener(
+  "click",
+  function (event) {
+    event.stopPropagation(); // 이 메서드를 사용하게 되면 이벤트 전파를 막을 수 있다.
+    console.log("버블링 span 태그");
+  },
+  false
+);
+// 이 밑으로는 실행되지 않음
+$p.addEventListener("click", function () {
+  console.log("버블링 p 태그");
+});
+$div.addEventListener("click", function () {
+  console.log("버블링 div 태그");
+});
+$main.addEventListener("click", function () {
+  console.log("버블링 main 태그");
+});
+$body.addEventListener("click", function () {
+  console.log("버블링 body 태그");
+});
+```
+
+이렇게 버블링되는 시점에서 이벤트 전파를 막아주게 되면, 캡처링과 "버블링 span 태그"까지만 출력이 되고 그 다음 전파는 막아진 것을 확인 할 수 있다.
+이러한 메서드는 실무에서도 자주 사용되기 때문에 잘 알아두면 좋다.
+
+이벤트를 막는 메서드 중에 `event.stopPropagation()`이러한 web API말고, `Event.preventDefault()` API가 존재한다.
+이 메서드는 해당 HTML 요소에 대한 기본 동작을 실행하지 않도록 지정한다.
+
+```html
+<body>
+  body 영역
+  <main>
+    main 영역
+    <div>
+      div 영역
+      <p>
+        p 영역
+        <span>span 영역</span>
+      </p>
+    </div>
+    <a href="http://naver.com">네이버</a>
+  </main>
+  <script src="index.js"></script>
+</body>
+```
+
+HTML에서 a태그를 클릭하게되면 해당 주소로 이동이 이루어진다.
+이러한 기본동작을 막고 싶다면 `preventDefault()` 메서드를 사용하게 되면 문서 이동이 막아진다.
+
+```js
+// index.js
+const $a = document.querySelector("a");
+$a.addEventListener("click", function (event) {
+  event.preventDefault(); // 이 메서드를 호출하게되면 기본동작을 막아준다.
+});
+```
+
+이러한 메서드는 submit 이벤트를 막거나, 앵커태그(a 태그) 기본 기능을 막을 때 주로 사용된다.
+
+<br>
+
+### Array.prototype.reduce로 중복 요소의 값 제거하기
+
+```js
+const nums = [1, 2, 3, 4, 2, 3, 4, 5];
+const result = nums.reduce((arr, cur) => {
+  if (!arr.includes(cur)) arr.push(cur);
+  return arr;
+}, []);
+console.log(result); // [1, 2, 3, 4, 5]
+```
+
+<br>
+
+---
+
+## JavaScript 모듈 시스템
