--- a/sub/ETC/기본개념정리.md
+++ b/sub/ETC/기본개념정리.md
@@ -1185,3 +1185,664 @@ console.log(result); // [1, 2, 3, 4, 5]
 ---
 
 ## JavaScript 모듈 시스템
+
+![](https://velog.velcdn.com/images/ninto_2/post/d869f075-e9fe-45ea-87c9-cd8febe15b79/image.png)
+
+자바스크립트는 원래 Web문서 안에서 간단히 웹 브라우저를 조작하기 위한 언어였다.
+하지만 애플리케이션의 규모가 커지면서 파일을 여러개로 분리해야 하는 상황이 오게 되었다.
+그래서 이렇게 분리된 하나의 파일을 Module(모듈)이라고 부른다.
+
+```js
+import a from "./a.js";
+import b from "./b.js";
+import c from "./c.js";
+```
+
+그리고 이러한 모듈을 언제든지 불러올 수 있도록 하는 방법을 모듈 시스템이라고 한다.
+
+```html
+<head>
+  <script src="a.js"></script>
+  <script src="b.js"></script>
+  <script src="c.js"></script>
+</head>
+```
+
+자바스크립트에서 모듈 시스템이 있기 전에는 브라우저에서 script태그를 사용하여 불러왔다.
+하지만 이러한 방법은 전역 스코프를 공유한다는 문제가 있었다.
+이렇게 여러개의 파일이 나뉘어 있어도 실제로 동작할 때는 하나의 파일 안에 있는 것처럼 전역 스코프를 공유하기 때문이다.
+
+```js
+// a.js
+var number = 10;
+console.log(number);
+```
+
+```js
+// b.js
+var number = 20;
+console.log(number);
+```
+
+```html
+<script src="a.js"></script>
+<script src="b.js"></script>
+<script>
+  console.log(number);
+</script>
+```
+
+브라우저에서 확인을 해보면, a.js에서 number는 10, b.js에서 number는 20으로 나오지만
+실제 HTML 파일에서 number는 20으로 출력된 것을 확인할 수 있다.
+그 이유는 HTML에서 b.js파일을 가장 나중에 불러왔기 때문이다. (number가 20으로 덮어씌워짐)
+
+```html
+<script src="b.js"></script>
+<script src="a.js"></script>
+<script>
+  console.log(number);
+</script>
+```
+
+a.js파일을 가장 나중에 불러오게 되면 number에는 10이 출력된다.
+이처럼 실제로 js파일이 나누어져 있지만, 브라우저에서 동작할 때에는 마치 하나의 파일 안에 있는 것처럼 동작을 하게된다.
+그렇기 때문에 만약 이름이 같은 변수가 있다면 덮어씌워지는 등 의도하지 않은 값이 출력되는 문제가 발생할 수 있다.
+
+애플리케이션의 규모가 커지면 커질 수록 이러한 자바스크립트 파일을 여러개로 분리해야 될 때가 많이 발생하는데
+그래서 다양한 자바스크립트 커뮤니티에서는 파일을 각각의 효과적으로 분리하기 위해 다양한 방법을 만들었다.
+이런 시스템을 바로 모델 시스템이라고 한다.
+
+즉, 모듈은 독립적으로 자신만의 스코프를 갖기 때문에 전역 스코프에서 발생되는 문제를 해소할 수 있다.
+
+```js
+// b.js
+console.log("1번 number" + number); // 10 - a.js의 number 값인 10이 출력됨
+var number = 20;
+console.log("2번 number" + number); // 20
+```
+
+그렇다면, a와 b.js파일에 있는 number를 HTML에서 각각 사용하고 싶다면 어떻게 해야할까?
+
+```html
+<script type="module" src="b.js"></script>
+<script type="module" src="a.js"></script>
+<script type="module">
+  console.log(number); // ReferenceError: number is not defined
+</script>
+```
+
+script태그에 type module을 설정하게 되면, 해당 파일은 모듈로 간주된다.
+출력이 안되는 이유는 각각의 모듈별로 스코프를 갖기 때문이다.
+
+```html
+<script type="module">
+  import a_number from "./a.js";
+  import b_number from "./b.js";
+  console.log(a_number, b_number); // 10 20
+</script>
+```
+
+모듈을 가져올 때는 `import`를 통해서 가져올 수 있다. 그리고 해당 모듈에서는 `export`를 사용해 자원을 내보내야 한다.
+
+```js
+// a.js
+var number = 10;
+console.log(number);
+
+export default number;
+```
+
+```js
+// b.js
+var number = 20;
+console.log(number);
+
+export default number;
+```
+
+위와 같은 모듈 시스템은 ES6에서 도입된 모듈 시스템이다.
+모듈시스템을 활용함으로써 a모듈과 b모듈에 있는 자원을 가져올 수 있다.
+
+**모듈 시스템의 장점**
+
+- 유지보수 용이 : 기능들이 모듈화가 잘 되어 있는 경우, 의존성을 줄일 수 있기 때문에 기능을 개선이나 수정이 용이하다.
+  (독립적으로 코드가 떨어져있기 때문에 수정할 때 용이하다.)
+- 네임스페이스화 : 코드의 양이 많아질수록 전역 스코프에 존재하는 변수명이 겹치는 경우가 존재한다.
+  이때 모듈로 분리하면 모듈만의 네임스페이스를 갖기 때문에 문제를 해결할 수 있다.
+- 재사용성 : 같은 코드를 반복하지 않고 모듈로 분리시켜서 필요할 때마다 재활용할 수 있다.
+  (만약 b모듈에서 a모듈에 있는 2,3번 기능을 가져오고 싶다고 했을때 해당 2,3번의 기능을 모듈화시켜서 재활용 할 수 있다.)
+
+**모듈 시스템 종류**
+
+- AMD : 가장 오래된 모듈 시스템 중 하나로 `require.js`라는 라이브러리를 통해 처음 개발되었다.
+- **CommonJS** : NodeJS 환경을 위해 만들어진 모듈 시스템이다.
+- UMD: AMD와 CommonJS와 같은 다양한 모듈 시스템을 함께 사용하기 위해 만들어졌다.
+- **ES Module** : ES6(ES2015)에 도입된 자바스크립트 모듈 시스템이다.
+
+**ES Module 방식**
+
+ES6(ES2015)에 도입된 자바스크립트 모듈 시스템이다.
+`script`태그에 `type='module'` 속성을 추가해주면, 이 파일은 모듈로서 동작하게 된다.
+
+```html
+<script type="module" src="module/index.js"></script>
+```
+
+모듈을 외부에서 사용할 수 있도록 내보낼 때는 `export`, `export default`와 같은 키워드를 사용하며,
+외부에서 모듈을 불러올 때는 `import`를 사용하여 모듈을 불러올 수 있다.
+
+- `named export`를 사용하여 함수 또는 변수를 내보낼 수 있다.
+
+```js
+//module/math.js
+export const perfectScore = 100;
+
+export const sum = (num1, num2) => {
+  return num1 + num2;
+};
+
+export const avg = function (score1, score2) {
+  return (score1 + score2) / 2;
+};
+```
+
+(각각의 변수나 함수를 선언해서 사용하는 방식)
+
+```js
+//module/index.js
+
+import { perfectScore, sum, avg } from "./math.js";
+console.log(perfectScore, sum(80, 10), avg(80, 90));
+```
+
+```html
+<script type="module" src="module/index.js"></script>
+```
+
+이렇게 모듈로 연결시켜주면 HTML파일에서 `100 90 85`처럼 해당 모듈을 잘 불러오는 것을 확인할 수 있다.
+모듈을 받아올 때 아래와 같이도 선언이 가능하다. (as를 이용해서 별칭을 적용)
+
+```js
+//module/index.js
+
+import * as math from "./math.js";
+console.log(math.perfectScore, math.sum(80, 10), math.avg(80, 90));
+```
+
+- `export default`를 사용하여 하나 기본 함수를 내보낼 수 있다. (단, 모듈 당 하나만 사용가능)
+
+```js
+//module/math.js
+export const perfectScore = 100;
+
+export const sum = (num1, num2) => {
+  return num1 + num2;
+};
+
+export const avg = function (score1, score2) {
+  return (score1 + score2) / 2;
+};
+
+const subtract = (num1, num2) => {
+  return num1 - num2;
+};
+
+export default subtract; // default 함수 지정
+```
+
+위와 같이 default로 함수를 선언한 경우에는 바로 default 함수를 받을 수 있다.
+
+```js
+//module/index.js
+
+import { perfectScore, sum, avg } from "./math.js";
+import subtract2 from "./math.js";
+console.log(perfectScore, sum(80, 10), avg(80, 90), subtract2(80, 90)); // 100 90 85 -10
+```
+
+default 함수같은 경우에는 이름을 마음대로 지정할 수 있다.
+ES Module을 내보낼 때 각각의 변수나 함수를 모듈로 내보낼 수 있지만, 한번의 기본값으로도 전달이 가능하다.
+
+```js
+//module/math.js
+const perfectScore = 100;
+
+const sum = (num1, num2) => {
+  return num1 + num2;
+};
+
+const avg = function (score1, score2) {
+  return (score1 + score2) / 2;
+};
+
+const subtract = (num1, num2) => {
+  return num1 - num2;
+};
+
+export default {
+  perfectScore,
+  sum,
+  avg,
+  subtract,
+};
+```
+
+```js
+//module/index.js
+import math from "./math.js";
+console.log(
+  math.perfectScore,
+  math.sum(80, 10),
+  math.avg(80, 90),
+  math.subtract(80, 90)
+); // 100 90 85 -10
+```
+
+이렇듯, 내보내는 방식은 다양하기 때문에 팀의 컨벤션이나 효율에 맞게 선해해서 사용하는 것이 중요하다.
+
+**CommonJS 방식**
+
+> NodeJS에서는 기본적으로 `CommonJS`모듈 시스템을 사용하고 있으며, NodeJS버전 13.2부터 `ES모듈`시스템에 대한 정식 지원이 시작됨에 따라 다른 도구 없이 NodeJS에서도 쉽게 ES모듈을 사용 할 수 있다. - MDN
+
+모듈을 내보낼 때에는 `exports`, `module.exports`와 같은 키워드를 사용하며, 외부에서 모듈을 불러올 때는 `require`를 사용하여 모듈을 불러 올 수 있다.
+
+- `exports`변수의 속성으로 내보낼 함수를 설정 할 수 있다.
+
+```js
+//module/math.js
+exports.perfectScore = 100;
+
+exports.sum = (num1, num2) => {
+  return num1 + num2;
+};
+
+exports.avg = function (score1, score2) {
+  return (score1 + score2) / 2;
+};
+
+exports.subtract = (num1, num2) => {
+  return num1 - num2;
+};
+```
+
+```js
+//module/index.js
+const { perfectScore, sum, avg, subtract } = require("./math"); // 전개구문으로 받는 방식
+console.log(perfectScore, sum(80, 10), avg(80, 90), subtract(80, 90));
+// node에서 실행하게 되면 100 90 85 -10이 출력된다.
+```
+
+```js
+//module/index.js
+const math = require("./math"); // 한꺼번에 math라는 하나의 객체로 받을 수도 있다.
+console.log(
+  math.perfectScore,
+  math.sum(80, 10),
+  math.avg(80, 90),
+  math.subtract(80, 90)
+); //사용할 땐 앞에 객체를 붙여야 한다.
+```
+
+- `modeule.exports`를 사용하여 하나의 객체로 묶어서 내보낼 수 있다.
+
+```js
+//module/math.js
+const perfectScore = 100;
+
+const sum = (num1, num2) => {
+  return num1 + num2;
+};
+
+const avg = function (score1, score2) {
+  return (score1 + score2) / 2;
+};
+
+const subtract = (num1, num2) => {
+  return num1 - num2;
+};
+
+module.exports = {
+  perfectScore,
+  sum,
+  avg,
+  subtract,
+};
+```
+
+```js
+//module/index.js
+const { perfectScore, sum, avg, subtract } = require("./math"); // 동일한 결과가 출력됨
+console.log(perfectScore, sum(80, 10), avg(80, 90), subtract(80, 90));
+// node에서 실행하게 되면 100 90 85 -10이 출력된다.
+```
+
+CommonJS에서도 그 때 상황에 맞게 사용하면 된다.
+이렇게 현재 가장 많이 사용되고 있는 모듈 시스템은 CommonJS와 ES Module 시스템이다.
+프론트엔드 웹 개발시에는 ES Module를 많이 사용하고, CommonJS 모듈 시스템은 NodeJS환경에서 사용하는 기본 모듈 시스템이다.
+
+그렇다면 NodeJS환경에서 ES Module 시스템을 사용하는 방법에 대해 알아보자.
+
+**ES Module for NodeJS**
+
+CommonJS 모듈 시스템을 채택했던 노드 환경에서 ES Module 시스템을 사용하려면 Babel과 같은 트랜스파일러(transpiler)를 사용해야 했는데, `NodeJS버전 13.2`부터 ES모듈 시스템에 대한 정식 지원이 시작됨에 따라 다른 도구 없이 노드환경에서 손쉽게 ES Module 시스템을 사용할 수 있게 되었다.
+
+- NodeJS 에서 ES Module 사용법 : `package.json -> "type" : "module"` 선언
+
+터미널에서 node로 해당 파일을 실행해보자.
+노드는 실행할 때 package.json 파일을 참고하기 때문에
+
+```json
+{
+  "type": "module"
+}
+```
+
+package.json파일을 수정후에 다시 명령어로 node로 파일을 실행하게 되면, 해당 내용이 에러없이 출력되는 것을 확인할 수 있다.
+
+<br>
+
+---
+
+## NPM 기초개념
+
+![](https://velog.velcdn.com/images/ninto_2/post/9b01fd1f-de1f-4100-98e7-5adcd1c74bf4/image.png)
+
+- Node Package Manager (NPM)
+
+자바스크립트로 어떠한 애플리케이션을 개발할 때 다양한 모듈이 필요하다.
+NPM은 이러한 모듈을 쉽게 다운받을 수 있도록 해주는 도구이다.
+
+예를 들어, 애플리케이션에 날짜를 표시한다고 가정을 해보자.
+
+```js
+const getToday = () => {
+  const today = new Date();
+  const year = today.getFullYear();
+  const month = today.getMonth() + 1;
+  const date = today.getData();
+
+  return `${year}년 ${month}월 ${date}일`;
+};
+console.log(getToday());
+```
+
+자바스크립트로 위와 같이 코딩을 함으로써 표현할 수 있다.
+하지만 보다 더 세부적인 조건의 시간과 초가 추가 된다면, 코드는 더 길어지게 되고 복잡해지게 된다.
+이렇듯, 다양한 포맷이 요구된다면 그 복잡도는 더더욱 증가하게 된다.
+그리고 매번 프로젝트를 진행할 때마다 같은 코드를 반복해야 한다면 매우 비효율적이게 된다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/64751ec8-ca70-4734-80b6-159fb2f02483/image.png)
+
+그래서 자주 사용하는 이러한 기능을 모듈화 한 후 모듈을 다른 프로젝트에서 다운받아 편하게 사용할 수 있도록 모듈 저장소라는 공간에 공유를 하는 것이다.
+
+이러한 모듈을 쉽게 다운받을 수 있도록 도와주는 도구가 바로 `npm`(Node Package Manager)이다.
+
+`npm install 모듈명`
+
+npm을 사용하려면 기본적으로 먼저 설치를 진행해야 한다.
+npm은 기본적으로 Node.js 설치 시 자동으로 설치가 된다. (따라서 npm을 사용하기 위해서는 Node.js를 설치해야 한다.)
+
+- Node.js : Chrome V8 JavaScript 엔진으로 빌드된 자바스크립트 런타임이다.
+
+자바스크립트를 웹 브라우저에서 실행하게 되면 웹 애플리케이션이 되는 것이고, 자바스크립트를 Node.js환경에서 실행하게 되면 이것은 백엔드 애플리케이션이다.
+
+Node설치는 운영환경에서는 안정화된 환경을 설치하는 것이 좋다.
+
+설치가 잘 되었는지 확인하는 방법은 터미널에서 아래와 같은 명령어를 입력하면 된다.
+(VS 코드 툴에서도 명령어는 동일)
+
+```
+node -v // 노드 버전이 출력됨
+npm -v // npm 버전이 출력됨
+```
+
+날짜 모듈을 다운받을 때는 `npm install dayjs` 이나 `npm i dayjs`
+
+```json
+// package.json
+
+{
+  "name": "learn_npm",
+  "version": "1.0.0",
+  "dependencies": {
+    "dayjs": "^1.10.8"
+  } // npm install dayjs 입력하면 node_modules라는 폴더와 함께 package-lock.json자동으로 추가됨
+}
+```
+
+- `npmjs.com` : npm 라이브러리를 공유해 놓은 사이트
+
+해당 사이트에 가서 라이브러리를 검색하면 install 명령어와 함께 깃허브 레파지토리, 홈페이지, 다운로드 수, 버전 등 다양한 정보를 확인할 수 있다.
+
+라이브러리를 설치한 후에 해당 라이브러리 홈페이지에서 사용법을 확인할 수 있는데, 다양한 사용법 포맷 방법이 나와있다.
+
+```js
+// index.js
+const dayjs = require("dayjs");
+console.log(dayjs("2013-02-04").format("[YYYYescape] YYYY-MM-DDTHH:mm:ssZ[Z]"));
+console.log(dayjs().format("YYYY-MM-DD")); // 오늘 날짜로 잘 출력됨
+// node에서 실행 - node index.js
+```
+
+`require`를 해서 모듈로 가져올 때 입력을 하게 되면, node_modules 디렉토리를 참고해서 다운로드 받은 라이브러리가 있는 것을 확인할 수 있고, `require`를 해서 접근을 하게 되면, default로 node_modules 디렉토리를 참고한다.
+
+**package.json**
+
+package.json 파일은 프로젝트에 대한 정보를 갖고 있는 파일이다.
+그리고 `dependencies`와 같은 속성을 활용하여 프로젝트에 의존된 라이브러리를 관리한다.
+package.json 파일은 직접 작성할 수 도 있고, `npm init`명령어를 통하여 자동으로 생성할 수 있다.
+
+**package.json 파일 만들기**
+
+```
+npm init
+//
+package name
+version
+description
+...
+// 기본적으로 default 설정으로 enter키를 눌러주면 package.json 파일이 생성된다.
+```
+
+package.json파일은 npm으로 프로젝트를 관리할 때 반드시 필요한 필수 파일이다.
+
+- **name**: 프로젝트 이름으로 가장 중요함 (필수항목)
+- **version**: 프로젝트 버전을 정의함. 주로 3단계 버전을 사용한다. (필수항목) - ex. 1.0.0
+- **description**: 프로젝트 설명을 기술함. npm search로 검색된 리스트에 표시되기 때문에 사람들이 패키지를 찾아내고 이해하는데 도움이 된다.
+- **keywords**: 프로젝트를 검색할 때 참조되는 키워드. description과 마찬가지로 npm search로 검색된 리스트에 표시된다.
+- **private**: true로 설정되면 npm 게시를 거부함. 이 값은 개인 레포지토리가 실수로 게시되는 것을 방지한다.
+  (한마디로 이 소스를 공유하지 않겠다는 의미)
+- **main**: main은 프로그램의 기본 진입점임.
+- **scripts**: 프로젝트에서 자주 실행하는 명령어를 scripts로 작성해두면 npm 명령어로 실행 가능하다.
+- **author**: 제작자의 이름을 지정함.
+- **license**: 패키지에 대한 라이센스를 지정하여 사람들이 패키지를 사용할 수 있는 방법과 패키지에 대한 제한사항을 알 수 있도록 해야 함.
+- **dependencies**: 프로젝트에서 사용하는(의존하는)모듈을 기술하는 부분임. 따라서 이 프로젝트가 어떤 모듈을 사용하는지 한 눈에 볼 수 있다. 애플리케션을 설치할 때 이 내용을 참조하여 필요한 확장 모듈을 자동으로 설치한다. 따라서 개발한 애플리케이션에서 사용하는 모듈은 여기에 꼭 명시를 해주어야 한다. (중요)
+- **devDependencies**: 개발할 때만 의존하는 모듈을 관리한다. (중요)
+
+```json
+// package.json
+
+{
+  "name": "learn_npm",
+  "version": "1.0.0",
+  "description": "npm 실습 프로젝트",
+  "main": "index.js",
+  "scripts": {
+    "start": "echo hello hello hello hello",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "dayjs": "^1.10.8"
+  }
+}
+```
+
+```
+npm run test // scripts안에 test 키를 입력하게 되면 뒤에 있는 문이 실행된다.
+echo hello // 'hello' - 터미널에 입력한 명령어를 출력하는 명령어
+npm run start // scripts안에 start 키의 문을 실행 - npm start 로도 실행가능
+```
+
+`start`나 `test`같은 명령어들은 프로젝트를 빌드할 때 자주 사용되는 명령어 이므로 잘 알아두어야 한다.
+`dependencies`와 `devDependencies`는 예를들어 A,B,C,D,E라는 모듈이 있다고 가정했을 때, E라는 모듈은 개발할 때만 필요하고 실제로 운영할 때는 필요없는 모듈이라고 한다면 굳이 E라는 모듈까지 배포할 필요는 없기 때문에 그때 E라는 모듈이 `devDependencies`에 들어가게 된다. 나머지 A,B,C,D모듈은 `dependencies` 속성에 기술된다.
+
+같은 날짜 라이브러리인 `moment`를 설치해보자.
+
+```
+npm i moment
+npm install --save-dev nodemon // 해당 라이브러리는 devDependencies에 기술하기 때문에 다음과 같은 명령어를 앞에 입력해준다.
+```
+
+```json
+// package.json
+
+{
+  "name": "learn_npm",
+  "version": "1.0.0",
+  "description": "npm 실습 프로젝트",
+  "main": "index.js",
+  "scripts": {
+    "start": "echo hello hello hello hello",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    // 운영, 배포할 때 필요한 라이브러리
+    "dayjs": "^1.10.8",
+    "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15" // 개발할 때 필요한 라이브러리
+  }
+}
+```
+
+이런식으로 개발과 운영시에 필요한 라이브러리를 나눌 수 있다.
+속성은 위에서 살펴본 속성들 말고도 다양한 속성이 있다. (더 알고싶다면 `package.json docs`사이트에 가서 확인)
+
+**node_modules**
+
+node_modules 디렉토리에는 `package.json`에 설치된 모듈 뿐만 아니라, package.json에 있는 모듈이 의존하고 있는 `package-lock.json` 모듈 전부가 설치된 디렉토리이다.
+(즉, 우리가 사용할 라이브러리들이 실제로 설치된 경로폴더)
+
+위에서 실제로 설치한 라이브러리는 총 3개 였지만 node_modules 폴더에는 엄청나게 많은 라이브러리들이 설치되어 있다.
+
+**package-lock.json**
+
+프로젝트에 설치된 **모듈들의 의존성 트리를 기록**하고 있으며, `package-lock.json` 파일을 참고하여 `node_modules`디렉토리안에 모듈을 다운받는다.
+
+예를들어, A라는 프로젝트를 개발하려고 할 때 a와 b라는 라이브러리가 필요하다고 가정해보자.
+그런데 b라는 라이브러리에서는 b-1, b-2 라는 또 다른 라이브러리를 사용하고 있다.
+마찬가지로 b-2라는 라이브러리에서도 c-1, c-2, c-3라는 라이브러리를 사용할 수 있다고 할 때 이렇듯, 라이브러리들 간에는 의존 관계를 가지고 있다.
+(의존관계이기 때문에 반드시 모든 라이브러리를 가지고 있어야 한다.)
+따라서, 이러한 의존관계성을 가지고 있는 라이브러리들의 정보를 package-lock.json라고 볼 수 있다.
+(package-lock.json파일에 들어가서 require로 검색해보면 의존성 라이브러리들을 확인할 수 있다. - 따라서 node_modules폴더에 굉장히 많은 라이브러리들이 같이 설치된 것임)
+
+**npm 명령어**
+
+| 명령어                              | 설명                                                                                                  |
+| :---------------------------------- | :---------------------------------------------------------------------------------------------------- |
+| npm init                            | 새로운 프로젝트(패키지)를 시작할 때 사용하는 명령어로 package.json 파일을 생성한다.                   |
+| npm init -y                         | -y 옵션을 사용하여 기본값을 자동으로 설정할 수 있다.                                                  |
+| npm install <패키지명>(축약 i)      | 패키지(= 라이브러리, 모듈)를 설치하는 명령어 이다.(로컬 설치)                                         |
+| npm install <패키지명@버전>         | 버전과 함께 사용하면 특정 버전을 설치할 수 있다.                                                      |
+| npm install --save 축약 -S          | --save 옵션을 사용하면 dependencies에 추가된다. (npm@5 버전 이후부터는 디폴트로 --save 옵션이 적용됨) |
+| npm install --save-dev 축약 -D      | 사용하면 devDependencies에 추가된다.                                                                  |
+| npm install <패키지명1> <패키지명2> | 여러개의 설치를 할 수 있다. (공백을 이용해 여러개 설치 가능)                                          |
+| npm install -g <패키지명>           | 전역설치를 할 수 있다. (또는 --global)                                                                |
+| npm install                         | package.json에 설정된 모든 패키지를 설치한다.                                                         |
+| npm install --production            | package.json에 설정된 모든 패키지를 설치하지만 devDependencies는 제외한다.                            |
+| npm uninstall <패키지명>            | 로컬 패키지 삭제                                                                                      |
+| npm uninstall -g <패키지명>         | 전역 패키지 삭제                                                                                      |
+| npm update <패키지명>               | 설치한 패키지를 업데이트 한다.                                                                        |
+| npm root                            | 로컬 패키지 설치 디렉토리 확인 (절대 경로 확인가능)                                                   |
+| npm root -g                         | 전역 패키지 설치 디렉토리 확인 (전역으로 설치된 절대 경로 확인가능)                                   |
+| npm ls                              | 로컬 설치된 패키지 확인 (설치된 모듈을 확인가능)                                                      |
+| npm ls --depth=2                    | 2뎁스 까지의 의존성 모듈을 모두 확인할 수 있음                                                        |
+| npm ls -g                           | 전역으로 어떠한 모듈이 설치되어 있는지 확인가능                                                       |
+| npm start                           | package.json 파일의 script 속성의 start 실행                                                          |
+| npm run <script-name>               | package.json 파일의 script 속성의 start의 스크립트 실행                                               |
+
+자주 사용하는 패키지를 전역으로 설치하기 위해서는 관리자 권한이 필요하다.
+맥OS같은 경우는 `sudo npm install -g 패키지명` 을 입력하고, 윈도우 같은 경우는 해당 터미널에서 우클릭을 하여 관리자 권한을 허용하면 해결 된다.
+전역 설치된 패키지는 어디에서든지 접근이 가능하다.
+
+한 가지 팁으로 package.json파일의 scripts 에서 접근을 설정할 수 있다.
+
+```json
+"scripts": {
+  "start":"nodemon index.js", // nodemon이라는 라이브러리를 간단하게 접근할 수 있도록 설정
+}
+```
+
+`npm run start`또는 `npm start` 로 접근하게 되면 실행이 됨.
+
+만약 이 소스를 깃허브 저장소나 소스 파일을 옮기고 싶을 때, node_modules폴더에는 엄청나게 많은 라이브러리들이 있기 때문에 이 모든 라이브러리들을 복사해서 옮겨놓거나 저장해놓게 되면 매우 비효율적일 수 있다.
+따라서 소스를 옮길 때에는 node_modules는 옮기지 않아도 된다. (node_modules폴더 삭제)
+
+만약 모듈을 다시 설치하고 싶다면, `npm install` 명령어만 입력하면 된다.
+그러면 자동으로 `dependencies`와 `devDependencies`를 참고해서 자동으로 다시 설치를 한다. (node_modules폴더가 다시 생성됨)
+
+만약에 의존되는 모듈의 버전이 꼬였거나, 이런 에러가 발생했다면 node_modules와 package-lack.json 파일을 삭제하고 다시 `npm install`해주면 된다.
+
+그리고 운영환경에 배포할 때 devDependencies에 들어있는 라이브러리는 배포를 하면 안된다.
+그럴때 설치하는 방법은 `npm install --production`을 주면 devDependencies의 모듈을 제외한 dependencies의 모듈만 설치를 한다.
+
+```
+// 맥OS에서 패키지 업데이트 하는 방법
+sudo npm i -g nodemon // nodemon 패키지를 전역으로 설치
+nodemon -v // 2.0.15 버전 정보가 표시됨
+sudo npm i -g nodemon@2.0.14 //만약 2.0.14버전으로 재설치
+sudo npm update -g nodemon // 해당 패키지 버전 업데이트
+```
+
+npm 명령어의 경우 종류가 굉장히 많으며, 이 모든 명령어들을 외울 필요는 없다.
+프로젝트를 생성 후 `npm init`를 해서 package.json 파일을 생성한 뒤 원하는 모듈을 `npm install`로 설치하면 된다. 그리고 필요없는 모듈은 `npm uninstall`로 제거하면 된다.
+그런뒤 script 명령어를 실행해서 서버를 빌드하거나 이러한 작업을 수행하면 된다.
+나머지는 필요할 때 그때그때 검색을 하여 자연스럽게 익숙해지도록 하자.
+
+**전역설치와 지역설치**
+
+- 시스템 상에서 해당 라이브러리의 명령어를 인식하게끔 설정하기 위해서 전역 설치를 한다. (ex. vue-cli)
+- 프로젝트에서 사용할 라이브러리는 지역설치
+- 시스템 레벨에서 사용할 자바스크립트 라이브러리(해당 라이브러리명을 명령어로 인식)는 전역설치
+
+```
+npm install -g nodemon // nodemon이라는 패키지를 전역설치
+```
+
+> 유닉스 리눅스 맥OS에서 관리자 권한으로 실행은 명령어 앞에 `subo`를 붙이고, 윈도우에서는 cmd를 실행할 때 마우스 우클릭 후 `관리자 권한으로 실행`을 클릭해서 명령어를 입력한다.
+
+**버전**
+
+기본적으로 버전은 `[MAJOR , MINOR, PATCH]`로 구성되어 있다.
+이러한 표기법은 시맨틱 버저닝(Semantic Versioning)규칙을 따르고 있다.
+`package.json`에 버전 명시를 다음과 같이 할 수 있다.
+`1.2.3` `> 1.2.3` `>=1.2.3` `<1.2.3` `<=1.2.3` `~1.2.3` `^1.2.3`
+
+**시맨틱 버저닝(Semantic Versioning)**
+
+시맨틱 버저닝은 소프트웨어의 버전 변경 규칙에 대한 제안이다.
+`[MAJOR , MINOR, PATCH]` (ex.1.0.2)
+
+- MAJOR(메이저): 주요변화, 기존 API 추가/변경/삭제 등, 이전 버전과 호환이 안 될 수 있음
+  (소프트웨어의 큰 변경이 있을 경우 메이저버전을 변경 후 배포한다.)
+- MINOR(마이너): **기능**추가, 이전 버전과 호환됨
+- PATCH(패치): **버그**수정, 이전 버전과 호환됨
+
+**틸드(~)**
+틸드는 현재 지정한 버전의 마지막 자리 내의 범위에서만 자동으로 업데이트 한다.
+
+- `~0.0.1` : `>=0.0.1 <0.1.0`
+- `~0.1.1`: `>=0.1.1 <0.2.0`
+- `~0.1`: `>=0.1.0 <0.2.0`
+- `~0`: `>=0.0 <1.0`
+
+<br>
+
+---
+
+##
