--- a/main/React/리액트개요.md
+++ b/main/React/리액트개요.md
@@ -58,7 +58,7 @@
 </body>
 ```
 
-원초적인 HTML 파일 하나 만들어서 동일한 코드를 복사 후 에 `<h3>`의 텍스트 부분을 About으로 수정하면 해결 할 수 있다. 결론적으로 두 파일은 article 섹션만 다르고, 나머지 섹션(header, nav, footer)은 비슷한 정도가 아니라 아예 똑같다.
+위와 같이 원초적인 HTML 파일을 하나 만들어서 동일한 코드를 복사 후 에 `<h3>`의 텍스트 부분을 About으로 수정하면 해결 할 수 있다. 하지만 결론적으로 두 파일은 article 섹션만 다르고, 나머지 섹션(header, nav, footer)은 비슷한 정도가 아니라 아예 똑같다.
 
 모두 다 똑같은 구성요소, 똑같은 코드로 이루어져 있다는 것을 확인할 수 있고 너무나도 많은 중복되는 부분들이 존재한다는 문제점을 가지게 된다.
 만약 이런 상황에서 100개의 파일에서 동일한 header 섹션 내의 내용을 또 바꿔야 한다면, 모든 페이지에 중복으로 들어가 있는 header를 100번 수정해야 되는 불편함을 가지게 된다.
@@ -98,7 +98,7 @@
 이런 html 요소들을 다 컴포넌트로 만들어서 재사용할 수 있는 아주 훌륭한 기술을 가지고 있다.
 마치 리액트로 웹을 개발하다 보면 레고를 만들어서 조립하는 것 같은 느낌으로 개발할 수 있어서 굉장히 편리하다.
 
-2.
+2. **리액트는 선언형 프로그래밍으로 jQuery와 같은 명령형 프로그래밍보다 효율적으로 코드의 길이를 줄일 수 있다.**
 
 ```html
 <head>
@@ -136,11 +136,85 @@
 2. 현재 결과값을 10진수 기준, 숫자형으로 변환해서 current라는 상수에 저장한다.
 3. current 상수에 저장된 값을 결과를 표시할 요소의 값에 plus라면 +1, minus라면 -1을 해서 넣어준다.
 
-위와 같은 프로그래밍은 명령형 프로그래밍이라고 하며, 절차를 하나하나 다 나열 해야한다는 특징을 가지고 있다.
+위와 같은 프로그래밍 방식을 명령형 프로그래밍이라고 하며, 절차를 하나하나 다 나열 해야한다는 특징을 가지고 있다.
+만약 거대한 웹 서비스의 모든 기능을 전부 이런식으로 코딩하게 된다면 코드가 너무 길어지고, 다시 읽는 사람도 해석하기가 힘들어진다.
 
-명령형 프로그래밍: jQuery < 선언형 프로그래밍: React
+![](https://velog.velcdn.com/images/ninto_2/post/0f05d277-d8e9-4406-936a-60c4e25e762a/image.png)
 
-Browser DOM(Document Object Model) < Virtual DOM
+그래서 사용하는 방식은 선연형 프로그래밍으로, 목적을 바로 말하는 방식처럼 사용하는 것이 유리하다.
+
+1. plus를 누르면 result값에 +1을, minus를 누르면 반대로 한다.
+
+> **리액트는 선언형 프로그래밍이다.**
+
+명령형 프로그래밍의 대표적 예시는 jQuery가 있고, 선언형 프로그래밍의 대표적 예시는 React가 있다.
+모든 명령형 프로그래밍이 나쁘다는 것은 아니다. 하지만 프로그래밍 측면에서 바라보자면 왼쪽에 있는 jQuery보다는 오른쪽에 있는 리액트와 같은 선언형 프로그래밍이 요즘 시대에 더욱 각광 받고 있다는 사실이다.
+
+3.
+
+마지막으로, 리액트를 사용하는 이유 중 가장 대표적인 리액트의 특징이라고 볼 수 있는 `Virtual DOM`(가상 돔)이다.
+Virtual DOM에 대해 알기 전에 먼저, DOM이라는 것에 대해 이해할 필요가 있다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/6fd8a708-ad58-4d80-aa5b-c4ee310c92be/image.png)
+
+> **DOM은 Document Object Model의 약자로, 문서 객체 모델이라는 뜻**을 가지고 있다.
+
+아주 간단하게 얘기하자면, 웹 브라우저가 HTML을 해석해서 보여주는 상황에서 HTML을 자기가 편한대로 해석할 수 있게 `Tree 형태`로 변환시켜 놓은 위와 같은 객체를 의미한다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/0ebe71df-2b75-4af9-96b3-d9f165db8cb8/image.png)
+
+그리고 이렇게 변환된 DOM은 위 그림과 같은 흐름에 따라서 눈 앞에 나타나게 된다.
+
+브라우저가 웹 페이지 하나를 보여주기 위해서 굉장히 많은 일을 하고 있다는 것을 알 수가 있다.
+
+```html
+<head>
+  <script>
+    fuction addItem() {
+      const ul = document.getElementById('list');
+      for (let i = 0; i < 5; i++) {
+        const curElm = document.createElement('li');
+        curElm.innerHTML = `hi ${i}`;
+        ul.append(curElm);
+      }
+    }
+  </script>
+</head>
+<body>
+  <h2 id="theme">Item List</h2>
+  <div>
+    <ul id="list"></ul>
+    <button onclick="addItem()">add</button>
+  </div>
+</body>
+```
+
+그런데 만약 위 코드처럼 DOM을 계속 변경하는 일이 발생하게 어떻게 될까?
+
+이 코드는 버튼을 누르면 addItem이라는 함수를 실행하고, list id를 갖는 ul 태그에 아래에 한번에 5개씩 item을 추가하고 있는 예제이다.
+
+이렇게 새로운 element들이 추가되거나 삭제된다고 했을때, 브라우저는 아이템을 하나 하나 넣을때마다 랜더링 작업을 계속해서 반복하게 된다. 버튼하나 누르면 5개씩 추가되서 동시에 다 하면 되는데 브라우저는 기본적으로 그렇게 동작하지 않는다.
+
+`append` 문장 하나하나 마다 DOM 요소가 한번씩 추가되기 때문에 그런 것 이다.
+그래서 위와 같이 굉장히 잦은 업데이트 상황에서는 브라우저는 필요 이상으로 많은 연산을 수행해야 하고, 결국 이런 것들은 성능저하의 문제로 이어지게 된다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/7e79e151-2814-4227-9631-d0705dc91ab2/image.png)
+
+> 이런 문제를 해결하기 위해 등장한 것이 바로, **리액트가 가지고 있는 가장 대표적인 특징인 Virtual DOM 이다.**
+
+한마디로 가상의 DOM을 사용하겠다는 의미이다.
+자바스크립트가 요소를 추가하는 과정에서 발생하는 변화를 실시간으로 계속 화면에 나타나는 DOM을 업데이트 시키는 것이 아니라,
+미리 가상의 DOM에 업데이트를 시켜놓은 다음에, 가상의 DOM이니까 랜더링 과정은 거치지 않는다. 즉, 화면에 실제로 그리진 않는다.
+따라서 그 만큼의 연산은 안하고 한번에 업데이트 할 수 있는 빨간색 부분을 모아서 한번에 실제 Real DOM에 업데이트 시키는 방식으로 과다연산을 해결하는 방법이다.
+(ex. 5번 업데이트 해야할 것을 1번만에 업데이트 한다.)
+
+물론, 이 Virtual DOM이 아니여도 `Buffer`를 사용해서 해결하는 방법도 있지만 처음에는 구현하기가 까다로울 수 있다. (상당히 고수준의 자바스크립트 또는 CS지식을 요구한다.)
+
+하지만 리액트를 사용하면 이런 Virtual DOM을 굉장히 자연스럽고 쉽게 이용할 수 있게 된다.
+
+<br>
+
+---
 
 ### React App 만드는 방법
 
